# pycpp

./: .coverage  .coveragerc  .gitignore  Dockerfile  Dockerfile.execute  README.md  build_cpp.sh  requirements.txt  setup.py
.devcontainer/: devcontainer.json
.github/actions/setup-git/: action.yml
.github/workflows/: build_and_test.yml
cpp/: CMakeLists.txt  calculator.cpp  calculator.h  pybind_wrapper.cpp
mylyric/: framework.py  naming.py  script.py
tests/: test_framework.py  test_script.py
tests/integration/: conftest.py  test_framework.py
tests/units/: test_script.py
